2008-07-19  Flávio Cruz  <flaviocruz@gmail.com>

	* file-get-translator.c (netfs_S_file_get_translator): Call major()
	and minor() macros.

2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>

	* io-seek.c (netfs_S_io_seek): Return EINVAL if file pointer would
	become negative.

2004-09-12  Marco Gerards  <metgerards@student.han.nl>

	* io-select.c: Include <hurd/ports.h>.
	(netfs_S_io_select): Add arguments `reply' and `replytype'.
	* mutations.h (IO_SELECT_REPLY_PORT): New macro.

2004-07-27  Roland McGrath  <roland@frob.com>

	* misc.h (OPENONLY_STATE_MODES): Remove O_NONBLOCK.

2004-02-10  Roland McGrath  <roland@frob.com>

	* runtime-argp.c (netfs_runtime_argp): Include <argp.h>.

2002-06-13  Roland McGrath  <roland@frob.com>

	* dir-readdir.c (netfs_S_dir_readdir): Revert last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* io-identity.c (netfs_S_io_identity): Use ino_t for FILENO.

	* dir-readdir.c (netfs_S_dir_readdir): Use vm_size_t for AMT.

2002-06-07  Roland McGrath  <roland@frob.com>

	* netfs.h (struct node): Use io_statbuf_t instead of struct stat.
	(netfs_attempt_statfs): Use fsys_statfsbuf_t instead of struct statfs.
	(struct peropen): Use loff_t instead of off_t.
	(netfs_attempt_read, netfs_attempt_write): Likewise.
	(netfs_attempt_set_size, netfs_file_get_storage_info): Likewise.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>

	* io-read.c (netfs_S_io_read): If desired amount is larger than
	symlink length, truncate amount.  Actually use WHOLE_LINK to store
	link target temporarily.  When reading the link target directly,
	update *DATALEN.

2002-05-13  Roland McGrath  <roland@frob.com>

	* netfs.h (struct node): New member `nn_translated'.
	* dir-lookup.c (netfs_S_dir_lookup): Examine that in place of
	nn_stat.st_mode to decide if there is a passive translator.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* io-version.c: New file.
	* Makefile (IOSRCS): Add io-version.c.
	* fsstubs.c (netfs_S_io_server_version): Function removed.