@@ -1,3 +1,7 @@
+2008-12-08  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefile (HURDLIBS): New variable.
+
 2008-07-19  Flávio Cruz  <flaviocruz@gmail.com>
 
 	* file-get-translator.c (netfs_S_file_get_translator): Call major()
